<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bottom_rounded"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_dialog"
        android:elevation="8dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logout"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_welcome"
            style="@style/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_edit"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_username"
            app:layout_constraintTop_toTopOf="@id/tv_username"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_pantun"
            style="@style/regular_style"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:maxLines="4"
            android:text="@string/pantun_tiga"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_berita_hari_ini"
        style="@style/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/berita_hari_ini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_user" />

    <Spinner
        android:id="@+id/spinner_country"
        android:layout_width="150dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_berita_hari_ini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_berita_hari_ini"
        style="@style/home_title"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_berita"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_country"
        tools:listitem="@layout/item_berita"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        />
</androidx.constraintlayout.widget.ConstraintLayout>